# aridanalysis_py

./: CODE_OF_CONDUCT.md  CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  LICENSE  README.md  arid_eda.py  arid_eda.py   arid_logreg.py  arideda_sandbox.ipynb  pyproject.toml  readme_summary.md  test_arideda.py
.github/: CODEOWNERS
.github/workflows/: build.yml
aridanalysis/: aridanalysis.py  error_strings.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: aridanalysis.rst  modules.rst
tests/: test_aridanalysis.py  test_arideda.py
