[tool.poetry]
name = "aridanalysis"
version = "0.2.2"
description = "Python package for Inferential Regression and EDA analysis."
authors = ["SantiagoRugelesSch <ansarusc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"
altair = "^4.1.0"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"
vega-datasets = "^0.9.0"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
flake8 = "^3.8.4"
python-semantic-release = "^7.15.0"

[tool.semantic_release]
version_variable = "aridanalysis/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
